--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  color-scheme: light;
 }
 
 body, html, #root {
@@ -13,6 +12,7 @@ body, html, #root {
   width: 100vw;
   height: 100vh;
   overflow: hidden; /* This is crucial for the "Desktop" feel */
+  background-color: #fff;
 }
 
 
